--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,5 @@
+1.5.2
+- [fix] у одного владельца сервера из-за неизвестных символов в названии сервера не мог скомпилироваться json
 1.5.1
 - добавлены поправки от @Artmoneyse
 - добавлен дебаг
