--- a/install.txt
+++ b/install.txt
@@ -1,34 +1,33 @@
-Авторы:
-- MattRh (доработка js+css, php, переход на независимый скрипт)	http://rubukkit.org/members/57495
-- book777 (оптимизация php, добавлене функциональности)	http://rubukkit.org/members/21542
-- Cyber Owl (начальная идея, начальный js => jmcAPI)	http://rubukkit.org/members/51017
+РђРІС‚РѕСЂС‹:
+- MattRh (РґРѕСЂР°Р±РѕС‚РєР° js+css, php, РїРµСЂРµС…РѕРґ РЅР° РЅРµР·Р°РІРёСЃРёРјС‹Р№ СЃРєСЂРёРїС‚)	http://rubukkit.org/members/57495
+- book777 (РѕРїС‚РёРјРёР·Р°С†РёСЏ php, РґРѕР±Р°РІР»РµРЅРµ С„СѓРЅРєС†РёРѕРЅР°Р»СЊРЅРѕСЃС‚Рё)	https://mymine.su/admin
+- Cyber Owl (РЅР°С‡Р°Р»СЊРЅР°СЏ РёРґРµСЏ, РЅР°С‡Р°Р»СЊРЅС‹Р№ js => jmcAPI)	http://rubukkit.org/members/51017
+- Artmoneyse (РќРµРєРѕС‚РѕСЂС‹Рµ С„РёРєСЃС‹) http://rubukkit.org/members/69175
 
-Ссылка - http://rubukkit.org/threads/99529
-Версия - 1.4
+РЎСЃС‹Р»РєР° - http://rubukkit.org/threads/99529
+Р’РµСЂСЃРёСЏ - 1.4
 
 
-Установка:
+РЈСЃС‚Р°РЅРѕРІРєР°:
 
-1) Кинуть папку с мониторингом в корень сайта (site.ru/monAJAX/)
+1) РљРёРЅСѓС‚СЊ РїР°РїРєСѓ СЃ РјРѕРЅРёС‚РѕСЂРёРЅРіРѕРј РІ РєРѕСЂРµРЅСЊ СЃР°Р№С‚Р° (site.ru/monAJAX/)
 
-2) Определиться с методом размещения этого мониторинга
-	- подгрузка шаблона:
-		Для уставноки всего лишь требуется настроить конфиг, в главном случае указав путь для сохранения шаблона 
-		(указать относительный путь до папки с Вашим шаблоном) ('template' => '...), а также 'tphp' => true, и вызвать единоразово updmon.php для формирования шаблона
-	- cron (обновление данных в фоновом режиме):
-		Наиболее оптимальный вариант. Сделать вариант "подгрузка шаблона", за исключением 'tphp' => false.
-		Далее необходимо в панели управления хостингом сайта найти "планировщик задач" либо просто "cron". В нем, следуя по инструкциям из справки добавить файл ajax.php (ежеминутно)
+2) РћРїСЂРµРґРµР»РёС‚СЊСЃСЏ СЃ РјРµС‚РѕРґРѕРј СЂР°Р·РјРµС‰РµРЅРёСЏ СЌС‚РѕРіРѕ РјРѕРЅРёС‚РѕСЂРёРЅРіР°
+	- РїРѕРґРіСЂСѓР·РєР° С€Р°Р±Р»РѕРЅР°:
+		Р”Р»СЏ СѓСЃС‚Р°РІРЅРѕРєРё РІСЃРµРіРѕ Р»РёС€СЊ С‚СЂРµР±СѓРµС‚СЃСЏ РЅР°СЃС‚СЂРѕРёС‚СЊ РєРѕРЅС„РёРі, РІ РіР»Р°РІРЅРѕРј СЃР»СѓС‡Р°Рµ СѓРєР°Р·Р°РІ РїСѓС‚СЊ РґР»СЏ СЃРѕС…СЂР°РЅРµРЅРёСЏ С€Р°Р±Р»РѕРЅР° 
+		(СѓРєР°Р·Р°С‚СЊ РѕС‚РЅРѕСЃРёС‚РµР»СЊРЅС‹Р№ РїСѓС‚СЊ РґРѕ РїР°РїРєРё СЃ Р’Р°С€РёРј С€Р°Р±Р»РѕРЅРѕРј) ('template' => '...), Р° С‚Р°РєР¶Рµ 'json_mode' => true, Рё РІС‹Р·РІР°С‚СЊ РµРґРёРЅРѕСЂР°Р·РѕРІРѕ updmon.php РґР»СЏ С„РѕСЂРјРёСЂРѕРІР°РЅРёСЏ С€Р°Р±Р»РѕРЅР°
+	- cron (РѕР±РЅРѕРІР»РµРЅРёРµ РґР°РЅРЅС‹С… РІ С„РѕРЅРѕРІРѕРј СЂРµР¶РёРјРµ):
+		РќР°РёР±РѕР»РµРµ РѕРїС‚РёРјР°Р»СЊРЅС‹Р№ РІР°СЂРёР°РЅС‚. РЎРґРµР»Р°С‚СЊ РІР°СЂРёР°РЅС‚ "РїРѕРґРіСЂСѓР·РєР° С€Р°Р±Р»РѕРЅР°", Р·Р° РёСЃРєР»СЋС‡РµРЅРёРµРј 'json_mode' => false.
+		Р”Р°Р»РµРµ РЅРµРѕР±С…РѕРґРёРјРѕ РІ РїР°РЅРµР»Рё СѓРїСЂР°РІР»РµРЅРёСЏ С…РѕСЃС‚РёРЅРіРѕРј СЃР°Р№С‚Р° РЅР°Р№С‚Рё "РїР»Р°РЅРёСЂРѕРІС‰РёРє Р·Р°РґР°С‡" Р»РёР±Рѕ РїСЂРѕСЃС‚Рѕ "cron". Р’ РЅРµРј, СЃР»РµРґСѓСЏ РїРѕ РёРЅСЃС‚СЂСѓРєС†РёСЏРј РёР· СЃРїСЂР°РІРєРё РґРѕР±Р°РІРёС‚СЊ С„Р°Р№Р» ajax.php (РµР¶РµРјРёРЅСѓС‚РЅРѕ)
 	- iframe (http://htmlbook.ru/html/iframe):
-		Метод примитивный. Тем не менее, им до сих пор пользуются. Для установки поребуется в указанном месте на сайте вставить HTML код:
-		<iframe src="http://site.ru/monAJAX/updmon.php" width="468" height="200" frameborder="no" scrolling="no">Здесь должен был быть мониторинг ;(</iframe>
-		И дописать в начало файла monStyle.css  строку:
+		РњРµС‚РѕРґ РїСЂРёРјРёС‚РёРІРЅС‹Р№. РўРµРј РЅРµ РјРµРЅРµРµ, РёРј РїРѕР»СЊР·СѓСЋС‚СЃСЏ, РµСЃР»Рё РІРѕР·РЅРёРє РєРѕРЅС„Р»РёРєС‚ СЃ JS-РёРЅС‚РµРіСЂР°С†РёРµР№. Р”Р»СЏ СѓСЃС‚Р°РЅРѕРІРєРё РїРѕСЂРµР±СѓРµС‚СЃСЏ РІ СѓРєР°Р·Р°РЅРЅРѕРј РјРµСЃС‚Рµ РЅР° СЃР°Р№С‚Рµ РІСЃС‚Р°РІРёС‚СЊ HTML РєРѕРґ:
+		<iframe src="http://site.ru/monAJAX/updmon.php" width="468" height="200" frameborder="no" scrolling="no">Р—РґРµСЃСЊ РґРѕР»Р¶РµРЅ Р±С‹Р» Р±С‹С‚СЊ РјРѕРЅРёС‚РѕСЂРёРЅРі ;(</iframe>
+		Р РґРѕРїРёСЃР°С‚СЊ РІ РЅР°С‡Р°Р»Рѕ С„Р°Р№Р»Р° monStyle.css  СЃС‚СЂРѕРєСѓ:
 		body{margin:0 !imprtant}
 
 
 
-При возникновении ошибок дать файлам в папке право 777 (далее список):
-     P.S. Обратите внимание, что не обязательно выдавать сразу все права по списку, можно идти по нему, последовательно выдавая право 777, если что-то в мониторинге продолжает не работать.
-	- ajax.php
-	- config.php, updmon.php, updmon.min.php
-	- cache/, cache/cahce.json, cache/common.json, work.temp (его как бы нет, но если все еще ничего не работает, то создайте его и дайте права)
-	- template/, template/common.tpl, template/server.tpl
+РџСЂРё РІРѕР·РЅРёРєРЅРѕРІРµРЅРёРё РѕС€РёР±РѕРє
+- РґР°С‚СЊ С„Р°Р№Р»Р°Рј Рё РїР°РїРєР°Рј РїСЂР°РІРѕ 777
+- РІРєР»СЋС‡РёС‚СЊ РІ РєРѕРЅС„РёРіРµ debug
+- РЅР°РїРёСЃР°С‚СЊ Рѕ РїСЂРѕР±Р»РµРјРµ https://github.com/book777/monAJAX/issues
