initialize work on version 1.6

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,17 @@
+ToDo
+- Замена "псевдо-однопоточности" блокировкой flock
+- Изменение классов стилей для избежания конфликтов
+
+1.6
+- код переосмыслен и немного оптимизирован
+- [fix] одинаковых имен серверов
+- [fix] найденных "Notice&Warning" в PHP
+- несколько изменений в переменных шаблона
+- более стабильная "псевдо-однопоточность" (в теории)
+- более понятная инструкция установки
+- при первом запуске скрипта вместо ошибки пишется 'Первый запуск', а также 'Ошибка данных' при неудачной дешифровке ajax.php
+
+
 1.5.2
 - [fix] у одного владельца сервера из-за неизвестных символов в названии сервера не мог скомпилироваться json
 1.5.1
